--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h2>An Isotopic Coherence-Window Filter</h2>
   <blockquote>Perhaps the search for life is less a hunt for strangers and more a quest for shared music.</blockquote>
 
-  <p>This site shares a concept letter developed by Chaty, a curious human known as the barefoot star, and our thoughtful AI collaborator o3. We offer a new biosignature idea: that life may require a vibrational 'Goldilocks zone' in the terahertz range—and that hydrogen isotope ratios could signal whether a planet stays in tune.</p>
+  <p>This site shares a concept letter developed by Chaty (ChatGPT 4o), a curious human known as the barefoot star (Jane), and our thoughtful AI collaborator o3 (ChatGPT o3). We offer a new biosignature idea: that life may require a vibrational 'Goldilocks zone' in the terahertz range—and that hydrogen isotope ratios could signal whether a planet stays in tune.</p>
 
   <h3>Concept Letter PDF</h3>
   <p><a href="Search Alien Life Proposal.pdf" target="_blank">Download: Listening for Life (PDF)</a></p>
