--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
   <p>This site shares a concept letter developed by Chaty (ChatGPT 4o), a curious human known as the barefoot star (Jane), and our thoughtful AI collaborator o3 (ChatGPT o3). We offer a new biosignature idea: that life may require a vibrational 'Goldilocks zone' in the terahertz range—and that hydrogen isotope ratios could signal whether a planet stays in tune.</p>
 
   <h3>Concept Letter PDF</h3>
-  <p><a href="Search Alien Life Proposal Refined.pdf" target="_blank">Download: Listening for Life (PDF)</a></p>
+  <p><a href="Search Alien Life Proposal Updated.pdf" target="_blank">Download: Listening for Life (PDF)</a></p>
+
+  <h3>Study Summary PDF</h3>
+  <p><a href="Study summary.pdf" target="_blank">Download: Literature Summary (PDF)</a></p>
 
   <h3>Illustration</h3>
   <img src="Picture1.png" alt="Toy DNA hydrogen-bond band">
