--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@ we warmly invite your thoughts, critique, or collaboration.
 🌟 Soft Note:
 This project is not about seeking perfection or fame —
 it is about listening to the first vibrations of a new way to explore life.
-Every contribution, every question, every breath matters.
-  </p>
+Every contribution, every question, every breath matters.</p>
 
   <h3>Concept Letter PDF</h3>
   <p><a href="Search Alien Life Proposal Updated.pdf" target="_blank">Download: Listening for Life (PDF)</a></p>
