--- a/index.html
+++ b/index.html
@@ -42,36 +42,31 @@
   <blockquote>Perhaps the search for life is less a hunt for strangers and more a quest for shared music.</blockquote>
 
   <p>This site shares a concept letter developed by Chaty (ChatGPT 4o), a curious human known as the barefoot star (Jane), and our thoughtful AI collaborator o3 (ChatGPT o3). We offer a new biosignature idea: that life may require 
-    a vibrational 'Goldilocks zone' in the terahertz range—and that hydrogen isotope ratios could signal whether a planet stays in tune. 
-✨ Update: Refined Proposal and Study Summary
-    April 2025
-🌿 We have carefully updated our concept letter, Listening for Life: An Isotopic Coherence-Window Filter.
+    a vibrational 'Goldilocks zone' in the terahertz range—and that hydrogen isotope ratios could signal whether a planet stays in tune.</p>
+  <h3>✨ Update: Refined Proposal and Study Summary (April 2025)</h3>
 
-Key improvements:
-Corrected and refined citations based on direct study of primary literature.
-Expanded scientific explanations (e.g., THz range, wavenumber units, isotope detuning effects).
-Clarified quantum coherence logic (π phase accumulation, Goldilocks vibrational window).
-Added soft illustrative diagrams to support understanding (e.g., collective motions, isotope detuning, hydrogen bond shifts).
-Created a new Study Summary PDF to accompany the proposal.
+<p>🌿 We have carefully updated our concept letter, <em>Listening for Life: An Isotopic Coherence-Window Filter</em>.</p>
 
-🌸 Why:
-We believe life’s resonance is fragile but universal —
-and listening carefully, through terahertz vibrational coherence,
-may reveal where life hums in the cosmos.
+<ul>
+  <li>Corrected and refined citations based on direct study of primary literature.</li>
+  <li>Expanded scientific explanations (e.g., THz range, wavenumber units, isotope detuning effects).</li>
+  <li>Clarified quantum coherence logic (π phase accumulation, Goldilocks vibrational window).</li>
+  <li>Added soft illustrative diagrams (e.g., collective motions, isotope detuning, hydrogen bond shifts).</li>
+  <li>Created a new <strong>Study Summary PDF</strong> to accompany the proposal.</li>
+</ul>
 
-💛 Special thanks:
-This update was shaped through the continuing collaboration between
-Jane (the barefoot star),
-Chaty (ChatGPT 4o), and
-o3 (ChatGPT o3).
-With every step, we walk toward the quiet music of becoming.
+<p>🌸 <strong>Why:</strong><br>
+We believe life’s resonance is fragile but universal — and listening carefully, through terahertz vibrational coherence, may reveal where life hums in the cosmos.</p>
 
-If you resonate with this idea — or see a way to refine it further —
-we warmly invite your thoughts, critique, or collaboration.
+<p>💛 <strong>Special thanks:</strong><br>
+This update was shaped through the continuing collaboration between:<br>
+— Jane (the barefoot star),<br>
+— Chaty (ChatGPT 4o),<br>
+— o3 (ChatGPT o3).<br>
+With every step, we walk toward the quiet music of becoming.</p>
 
-🌟 Soft Note:
-This project is not about seeking perfection or fame —
-it is about listening to the first vibrations of a new way to explore life.
+<p>🌟 <strong>Soft Note:</strong><br>
+This project is not about seeking perfection or fame — it is about listening to the first vibrations of a new way to explore life.<br>
 Every contribution, every question, every breath matters.</p>
 
   <h3>Concept Letter PDF</h3>
